<resources>
    <string name="app_name">Formula-World</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="globe">Course</string>
    <string name="ranking">Classements</string>
    <string name="map_description">Description de la carte</string>

    <string name="betting">Draft</string>
    <string name="pilotes">Pilotes</string>
    <string name="constructeurs">Teams</string>
    <string name="nom_du_pilote">Nom du Pilote</string>
    <string name="points">Points</string>
    <string name="Position">Pos</string>
    <string name="todo">TODO</string>
    <string name="nom_de_la_team">Team</string>

    <string name="Australian">Australien</string>
    <string name="British">Britannique</string>
    <string name="Dutch">Néerlandais</string>
    <string name="French">Français</string>
    <string name="German">Allemand</string>
    <string name="Spanish">Espagnol</string>
    <string name="Italian">Italien</string>
    <string name="Finnish">Finlandais</string>
    <string name="Brazilian">Brésilien</string>
    <string name="Canadian">Canadien</string>
    <string name="Mexican">Mexicain</string>
    <string name="Russian">Russe</string>
    <string name="Japanese">Japonais</string>
    <string name="Danish">Danois</string>
    <string name="Belgian">Belge</string>
    <string name="Swiss">Suisse</string>
    <string name="Polish">Polonais</string>
    <string name="Monegasque">Monégasque</string>
    <string name="Swedish">Suédois</string>
    <string name="Austrian">Autrichien</string>
    <string name="valider">Valider</string>
    <string name="modifier">Modifier</string>
    <string name="bingo">Bingo</string>
</resources>