<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivDriverPhoto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_driver_default"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvDriverPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textSize="18sp"
        android:text="@string/Position" />

    <TextView
        android:id="@+id/tvDriverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/nom_du_pilote" />

    <TextView
        android:id="@+id/tvDriverPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/points" />

</LinearLayout>
