<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="160dp"
android:layout_margin="8dp"
app:cardCornerRadius="8dp">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TextView pour la position -->
    <TextView
        android:id="@+id/tvTeamRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Position"
        android:padding="10dp"
        android:layout_centerVertical="true"/>

    <!-- LinearLayout vertical -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_toEndOf="@id/tvTeamRanking"
        android:orientation="vertical"
        android:gravity="end"

        android:paddingEnd="10dp"
        android:layout_centerVertical="true"

        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            />
        <!-- TextView pour les points -->

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_du_pilote"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTeamPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:background="@drawable/rounded_corner_white"
            android:text="@string/points"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
</androidx.cardview.widget.CardView>
