<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.RankingFragment">
    <RelativeLayout
        android:id="@id/llToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
    <TextView
        android:id="@+id/tvClassementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ranking"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/llToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClassementTitle"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:elevation="20dp"
        >

        <TextView
            android:id="@+id/tvPilotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pilotes"
            android:textSize="18sp"
            android:padding="10dp"
            android:clickable="true"
            android:textColor="@color/classements_selected_color"
            android:focusable="true"
            android:gravity="center"
            android:background="@drawable/text_view_selector" />

        <TextView
            android:id="@+id/tvConstructeurs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constructeurs"
            android:textSize="18sp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/classements_selected_color"
            android:background="@drawable/text_view_selector" />

    </LinearLayout>
    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llToggleGroup"
        />

</RelativeLayout>
